--- a/src/main/resources/templates/loginJoin/login.html
+++ b/src/main/resources/templates/loginJoin/login.html
@@ -10,7 +10,39 @@
         @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
+        .loginMainDiv{
+            width: 1100px;
+            min-height: 500px;
+            margin: 50px auto;
+            text-align: center;
+            font-family: 'Do Hyeon', sans-serif;
+            font-size: 20px;
+        }
 
+        .loginMainDiv p:nth-child(1){
+            font-size: 30px;
+            font-weight: bold;
+        }
+
+        .loginMainDiv button{
+            all: unset;
+        }
+
+        .kakaoButtonDiv{
+            width: 100%;
+            text-align: center;
+        }
+
+        .kakaoButtonDiv button{
+            margin: 40px auto;
+            display: block;
+        }
+
+        @media screen and (max-width: 1100px) {
+            .loginMainDiv{
+                width: 100vw;
+            }
+        }
 
     </style>
 
@@ -51,17 +83,21 @@
 
     <div class="loginMainDiv">
         <div>
-            <p>처음이시라면 회원가입 부탁드립니다</p>
-            <p>카카오톡 동의 쪽에 꼭 이메일 체크를 해주셔야</p>
-            <p>회원가입이 가능합니다!!</p>
+            <p>회원가입에 관하여</p>
+            <p>개인공부를 위해 만든 카카오톡 로그인, 회원가입 기능입니다.</p>
+            <p>제가 저장하는건 회원가입을 위한 이메일외에는 다른 정보는 일체 저장하지 않습니다.</p>
+            <p>혹시 회원가입을 원하신다면 이메일 체크를 해주시고 만약 삭제를 원한다면 탈퇴버튼이나 이메일로 문의해주세요</p>
         </div>
-
         <script th:inline="javascript">
             let Loginredirect_uri = [[${Loginredirect_uri}]]
         </script>
 
-        <button class="loginButton" type="button"  onclick="kakaoGoJoinPage()">카카오 회원가입</button>
-        <button class="loginButton" type="button"  onclick="kakaoLogin(Loginredirect_uri)">카카오 로그인</button>
+        <div class="kakaoButtonDiv">
+            <button class="loginButton" type="button"  onclick="kakaoGoJoinPage()"><img src="/img/kakao_start_medium_wide.png"></button>
+            <button class="loginButton" type="button"  onclick="kakaoLogin(Loginredirect_uri)"><img src="/img/kakao_login_medium_wide.png"></button>
+        </div>
+
+
     </div>
 
 
