--- a/src/main/resources/templates/skillBoard/skillBoardWrite.html
+++ b/src/main/resources/templates/skillBoard/skillBoardWrite.html
@@ -10,32 +10,45 @@
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet">
 
     <style  th:inline="text">
-        @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
-
-        html{
-            width: 100vw;
-            height: 100vh;
+        .boardWriteMainDiv{
+            width: 1100px;
+            height: 900px;
+            min-height: 900px;
+            margin: 40px auto;
         }
 
-        body ,html{
-            width: 100vw;
-            height: 100%;
-            background-color: #153040;
-            background-image: url([[@{/img/newBackpiture.jpg}]]);
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+        .writeinfoDiv{
+            text-align: center;
+            align-content: center;
+            display: block;
+            width: 100%;
         }
+        .writeinfoDiv label{
+            display: block;
+            width: 100%;
+            font-family: 'Do Hyeon', sans-serif;
+        }
+        .writeinfoDiv input{
+            width: 100%;
+            display: block;
+            font-family: 'Do Hyeon', sans-serif;
+        }
+
 
         .summernote{
-            width: 100vw;
-            height: 70vh;
-            min-height: 500px;
+            min-height: 800px;
         }
 
-        .summernote img{
-            max-width: 100%;
+        textarea{
+            min-height: 800px;
+        }
+
+        @media screen and (max-width: 1100px) {
+            .boardWriteMainDiv{
+                width: 100%;
+                min-height: 1200px;
+                margin: 40px 0;
+            }
         }
 
     </style>
@@ -54,12 +67,12 @@
 <div layout:fragment="content">
 
 
-    <div class="form-group container">
-        <div class="form-group text-light font-weight-bold bg-dark text-center rounded">
+    <div class="boardWriteMainDiv">
+        <div class="writeinfoDiv">
             <label for="title">[제목]</label>
-            <input type="text" class="form-control bg-dark text-light text-center" id="title">
+            <input type="text" id="title">
             <label for="boardDescription">설명(없어도 괜찮습니다.)</label>
-            <input type="text" class="form-control bg-dark text-light text-center" id="boardDescription">
+            <input type="text" id="boardDescription">
         </div>
         <textarea class="summernote" rows="5" id="content" style="resize: none;"></textarea>
         <button type="button" class="btn btn-warning btn-block" onclick="skillBoardWrite()">작성</button>
@@ -80,6 +93,7 @@
         $('.summernote').summernote({
             focus: true,                  // 에디터 로딩후 포커스를 맞출지 여부
             lang: "ko-KR",					// 한글 설정
+            height: 700,
             placeholder: '최대 2048자까지 쓸 수 있습니다',	//placeholder 설정
             callbacks: {
                 //여기 부분이 이미지를 첨부하는 부분
